--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
 pyTelegramBotAPI==4.12.0
 openai==0.28.1
 python-dotenv==1.0.0
-PyMuPDF==1.23.7
+PyMuPDF==1.21.1   # или pdfminer.six, если просто читаешь PDF
