--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 pyTelegramBotAPI==4.12.0
 openai==0.28.1
 python-dotenv==1.0.0
-PyMuPDF==1.21.1   # или pdfminer.six, если просто читаешь PDF
+PyMuPDF==1.21.1
+python-docx==0.8.11 # или pdfminer.six, если просто читаешь PDF
